# ChangeLog for app-office/taskcoach
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.15 2008/10/27 21:22:02 caster Exp $

*taskcoach-0.71.2 (27 Oct 2008)

  27 Oct 2008; Vlastimil Babka <caster@gentoo.org> -taskcoach-0.70.3.ebuild,
  +taskcoach-0.71.2.ebuild:
  Version bump.

*taskcoach-0.71.1 (13 Oct 2008)

  13 Oct 2008; Vlastimil Babka <caster@gentoo.org> -taskcoach-0.71.0.ebuild,
  +taskcoach-0.71.1.ebuild:
  Version bump, bug fixes. Works on amd64 again, funambol synchronization
  not supported there though.

*taskcoach-0.71.0 (12 Oct 2008)

  12 Oct 2008; Vlastimil Babka <caster@gentoo.org> +taskcoach-0.71.0.ebuild:
  Version bump.

  05 Oct 2008; Vlastimil Babka <caster@gentoo.org> taskcoach-0.70.3.ebuild,
  taskcoach-0.70.4.ebuild:
  Put wxpython also to DEPEND, bug #240099.

*taskcoach-0.70.4 (30 Sep 2008)

  30 Sep 2008; Vlastimil Babka <caster@gentoo.org> -taskcoach-0.70.1.ebuild,
  -taskcoach-0.70.2.ebuild, +taskcoach-0.70.4.ebuild:
  Version bump.

*taskcoach-0.70.3 (17 Aug 2008)

  17 Aug 2008; Vlastimil Babka <caster@gentoo.org> +taskcoach-0.70.3.ebuild:
  Version bump.

*taskcoach-0.70.2 (07 Aug 2008)

  07 Aug 2008; Vlastimil Babka <caster@gentoo.org>
  -files/taskcoach-setup.patch, -taskcoach-0.70.0.ebuild,
  +taskcoach-0.70.2.ebuild:
  Version bump and dump.

*taskcoach-0.70.1 (14 Jul 2008)

  14 Jul 2008; Vlastimil Babka <caster@gentoo.org> -taskcoach-0.69.2.ebuild,
  +taskcoach-0.70.1.ebuild:
  Version bump. Includes upstream fix for bug #222391.

  04 Jun 2008; Vlastimil Babka <caster@gentoo.org>
  +files/taskcoach-setup.patch, taskcoach-0.70.0.ebuild:
  Fix bug #222391 for python 2.4 users. Also switch to icon that's now
  included in the upstream distfile instead of distributing own.

*taskcoach-0.70.0 (12 May 2008)

  12 May 2008; Vlastimil Babka <caster@gentoo.org> -taskcoach-0.69.1.ebuild,
  +taskcoach-0.70.0.ebuild:
  Version bump.
