@@ -1,8 +1,6 @@
-DIST TaskCoach-0.70.4.tar.gz 879771 RMD160 5690d8686839ccaa7c4191a9d9d1339902661004 SHA1 9ec6af4ef2aae5ee6c016a7e45724b8aa3476717 SHA256 3f046eb1832d80627043cb89221b02f0aa2f69a53612a4e0d92d45771cac2a3a
-DIST TaskCoach-0.71.1.tar.gz 1773613 RMD160 8b78b6fd8b4ead6c9ff6847c09bc9030f8a4a0a8 SHA1 045d067252365259f1c7b78982d32fbed92f5d71 SHA256 4864662a399ed33f122b58e85805b763aac88accbed4ffaecbbd207a62ab0758
 DIST TaskCoach-0.71.2.tar.gz 1779860 RMD160 9cab0e3aa45cd1a0f41cb7404312e90189856741 SHA1 00d6b04de17bab056789726f16a60ec888351cdb SHA256 504e62015c8769527beddd4fd1a8b445aad54d95e18f08dfcc28152913faab11
-EBUILD taskcoach-0.70.4.ebuild 862 RMD160 2e23179b575264a9d0fb72fdb7da51d0d0162187 SHA1 f5a2626f83f04f6555fb477e23b995ec7f4d82ea SHA256 ba8d04cb694695b2b95663254a5a77e9dfae7f0779a14840769e8e8065973708
-EBUILD taskcoach-0.71.1.ebuild 1040 RMD160 1c57363cd7f8a9c067017d2bbff7fea982180a36 SHA1 37b87c5b6a24852d7d5f8ae731816e4e3553c47e SHA256 e1c8edc9d2d4515e377794fcf72f2ef400eb3267d1ff1e54bfa5baf83fb88f4d
+DIST TaskCoach-0.71.3.tar.gz 1854354 RMD160 cc86d24a386586b91d09fa19584151c7a7a2def9 SHA1 896f12fa8dad6cd0467e30d1c6e8357d2cd868ac SHA256 393984996065fefcde72282e2676f8224620242cb79c2dba7c4c001cfb683597
 EBUILD taskcoach-0.71.2.ebuild 1040 RMD160 8d333e0ab67a423efe897059c5930181a3f3a956 SHA1 e05917302bc616cc48fce2abcde194c5be956688 SHA256 e4e55b1c4213e0d9ab979a18a97f1d36493478abe17244b45064363de8420de5
-MISC ChangeLog 2781 RMD160 69bb0b065318077e1033d6f21894aa031da388b3 SHA1 00ee4d0f177717e65bc146d30584635caef14dba SHA256 b2cb1397298e5952637a788048d62c574c0750c4a150425ed884f73f53ee0922
+EBUILD taskcoach-0.71.3.ebuild 1040 RMD160 417b387d55a85540106252bbd4cbf632fb0ab6ef SHA1 adda4c692d8e37cd80d6c50ebfba49357f18b8a3 SHA256 32003566ec7dd9365d7e0f11b4e4f1d0761c9758b36f8c3ff5296d4875ac2c62
+MISC ChangeLog 2962 RMD160 6abad3a9d06e80436501bb5ae154c7887798c315 SHA1 8bc0defe661f73d152423d82c12d0fd7033f5d39 SHA256 59bb54c94a19f49c577ddec430de8da2c4c4d35084b6c0e744cbe54465d9a297
 MISC metadata.xml 218 RMD160 55c7da47548fa7583b66c5851782a83e92566fbd SHA1 073b6fc1108038a5125d7c9c661aa56fa289bd6b SHA256 167f14bc8b5b6d52bf9199a18085da3006bde3bf8821ea0d209ed240df550c47
