@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/taskcoach-0.70.4.ebuild,v 1.2 2008/10/05 20:02:02 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/taskcoach-0.71.3.ebuild,v 1.1 2008/11/12 10:21:56 caster Exp $
 
 inherit distutils eutils
 
@@ -21,6 +21,16 @@ RDEPEND="${DEPEND}"
 S="${WORKDIR}/${MY_P}"
 
 DOCS="CHANGES.txt"
+
+src_unpack() {
+	distutils_src_unpack
+
+	cd "${S}"
+	if ! use x86; then
+		elog "Removing Funambol support, works only on x86."
+		rm -fv taskcoachlib/bin.in/linux/*.so || die
+	fi
+}
 
 src_install() {
 	distutils_src_install
