@@ -1,6 +1,12 @@
 # ChangeLog for app-office/taskcoach
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.15 2008/10/27 21:22:02 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.16 2008/11/12 10:21:56 caster Exp $
+
+*taskcoach-0.71.3 (12 Nov 2008)
+
+  12 Nov 2008; Vlastimil Babka <caster@gentoo.org> -taskcoach-0.70.4.ebuild,
+  -taskcoach-0.71.1.ebuild, +taskcoach-0.71.3.ebuild:
+  Version bump.
 
 *taskcoach-0.71.2 (27 Oct 2008)
 
